# wayland-cxx-scanner

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  meson.build  meson.options
.github/workflows/: ci.yml  codeql.yml  lint.yml
examples/: meson.build  simple-egl-plan.md
examples/minimal/: client.cpp  meson.build  protocol.xml  roundtrip.cpp  server.cpp
examples/presentation-shm/: main.cpp  meson.build
examples/simple-egl/: main.cpp  meson.build
examples/subsurfaces/: main.cpp  meson.build
examples/wayland-info/: meson.build  wayland-info.cpp
examples/wl-screenshooter/: main.cpp  meson.build  protocol.xml
include/wl/: event_map.hpp  fd_handle.hpp  proxy.hpp  proxy_impl.hpp  raii.hpp  registry.hpp  resource_impl.hpp  wayland.hpp  wl_ptr.hpp
meta-wayland-cxx-scanner/conf/: layer.conf
meta-wayland-cxx-scanner/recipes-devtools/wayland-cxx-scanner/: wayland-cxx-scanner_0.1.0.bb
protocols/: meson.build
src/: codegen_c.cpp  codegen_c.hpp  codegen_client_cxx.cpp  codegen_client_cxx.hpp  codegen_server_cxx.cpp  codegen_server_cxx.hpp  ir.hpp  main.cpp  meson.build  name_transform.cpp  name_transform.hpp  xml_parser.cpp  xml_parser.hpp
subprojects/: gtest.wrap  pugixml.wrap
subprojects/packagefiles/pugixml/: meson.build
subprojects/pugixml-1.14/: .meson-subproject-wrap-hash.txt
tests/: meson.build
tests/fixtures/: minimal.xml  minimal_bitfield_enum.xml  minimal_destructor.xml  minimal_fd_arg.xml
tests/integration/: test_roundtrip_client.cpp  test_roundtrip_server.cpp
tests/unit/: test_cli.cpp  test_codegen_c.cpp  test_codegen_client_cxx.cpp  test_codegen_server_cxx.cpp  test_event_map.cpp  test_ir.cpp  test_name_transform.cpp  test_proxy.cpp  test_raii.cpp  test_resource_impl.cpp  test_xml_parser.cpp
