# SPDX-License-Identifier: MIT
# Copyright (c) 2026 wayland-cxx-scanner contributors

subdir('minimal')
# simple-egl uses subdir_done() internally if EGL/GLES/wayland-egl deps absent.
subdir('simple-egl')
# wl-screenshooter uses subdir_done() internally if wayland-scanner is absent.
subdir('wl-screenshooter')
