# SPDX-License-Identifier: MIT
# Copyright (c) 2026 wayland-cxx-scanner contributors

subdir('minimal')
# simple-egl uses subdir_done() internally if EGL/GLES/wayland-egl deps absent.
subdir('simple-egl')
# wayland-info uses subdir_done() internally if wayland-scanner dep is absent.
subdir('wayland-info')
# wl-screenshooter uses subdir_done() internally if wayland-scanner is absent.
subdir('wl-screenshooter')
