# SPDX-License-Identifier: MIT
# Copyright (c) 2026 wayland-cxx-scanner contributors

subdir('minimal')
# simple-egl uses subdir_done() internally if EGL/GLES/wayland-egl deps absent.
subdir('simple-egl')
# wayland-info uses subdir_done() internally if wayland-scanner dep is absent.
subdir('wayland-info')
# subsurfaces uses subdir_done() internally if wayland-protocols/scanner absent.
subdir('subsurfaces')
# presentation-shm uses subdir_done() internally if deps absent.
subdir('presentation-shm')
